# imposter-rs

./: .gitignore  Cargo.toml  README.md
crates/domain/: Cargo.toml
crates/domain/src/: commands.rs  errors.rs  lib.rs  model.rs  rng.rs  role.rs  tests.rs  topics.rs  transitions.rs
crates/server_ws/: Cargo.toml
crates/server_ws/src/: app_impl.rs  lib.rs  main.rs  protocol.rs  request.rs  state.rs  subscriptions.rs  tests.rs
crates/service/: Cargo.toml
crates/service/src/: errors.rs  game_service.rs  lib.rs  store.rs  tests.rs  types.rs
docs/: architecture.md  frontend-contract.md  protocol-ws.md  testing.md  ux.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/lib/: wsClient.ts
frontend/tests/e2e/: README.md  conftest.py  requirements.txt  test_admin_permissions_contract.py  test_error_contracts.py  test_lobby_role_contracts.py  test_public_rooms_contract.py  test_round_chat_contracts.py
frontend/tests/e2e/helpers/: markql_assert.py
