[package]
name = "server_ws"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
service = { path = "../service" }
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5"
uuid.workspace = true
